--- a/src/main/resources/static/Introduccion.html
+++ b/src/main/resources/static/Introduccion.html
@@ -30,8 +30,24 @@
                     <figure> 
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/lW3jKt29edI?si=243-X7t9opc-dTYg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         
+
+                        <h1>Algunas Especificaciones</h1>
+                        <ol>
+                            <li>Motor</li>
+                            <br>
+                            <li>Potencia</li>
+                            <br>
+                            <li>Frenos</li>
+                            <br>
+                            <li>Aerodinamica</li>
+                            <br>
+                            <li>Motor</li>
+                            <br>
+                            <li>Suspecion</li>
+                        </ol>
+
                         <h3>Nuevo Americano Mas Potente!!!</h3>
-                        
+
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/G56P_F-nVZY?si=bSY6yaRulNNTwCaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </figure>
                 </article>
@@ -41,4 +57,4 @@
                 Derechos Reservados 2023 &copy;
             </footer>
         </body>
-</html>
+    </html>
