--- a/src/main/resources/static/TiposAutos.html
+++ b/src/main/resources/static/TiposAutos.html
@@ -30,14 +30,19 @@
             
             <h2>Ford Raptor</h2>
             <img src="https://di-uploads-pod2.dealerinspire.com/riverviewford2/uploads/2016/01/2017-Ford-Raptor-On-White.png" height ="230" alt="alt"/>
+            <p>El Ford Raptor es una línea de camionetas pickup de alto rendimiento fabricadas por Ford Motor Company. Están diseñadas específicamente para el rendimiento todoterreno y se destacan por su capacidad todoterreno, potencia y estilo agresivo.</p>
             <h2>Ford Explorer</h2>
             <img src="https://th.bing.com/th/id/R.4508a5f559ee3b49bb6f29ab8ff88864?rik=rsbQH0LLO0DGPw&pid=ImgRaw&r=0" height ="230" alt="alt"/> 
+            <p>La Ford Explorer es una SUV (vehículo utilitario deportivo) fabricada por Ford Motor Company y se ha convertido en uno de los modelos más icónicos de la marca.</p>
             <h2>Ford Munstang</h2>
             <img src="https://th.bing.com/th/id/R.cc7069809fad465311b2380d4b591e5c?rik=GwVMMWk2hoDtew&pid=ImgRaw&r=0" height ="230" alt="alt"/> 
+            <p>El Ford Mustang es un icónico automóvil deportivo fabricado por Ford Motor Company desde la década de 1960.</p>
             <h2>Ford Escape</h2>
             <img src="https://th.bing.com/th/id/OIP.hBoAcvUxEUO1g3w4DdPXCwHaEE?pid=ImgDet&rs=1" height ="230" alt="alt"/>   
+            <p>Experimenta el equilibrio perfecto entre estilo, comodidad y rendimiento con la Ford Escape. Esta SUV compacta combina un diseño moderno, tecnología avanzada y eficiencia de combustible para llevarte a donde quieras llegar con estilo y confianza.</p>
             <h2>Ford Edge</h2>
             <img src="https://th.bing.com/th/id/R.f08b48d25b1091b0d0dcb7cf33390a41?rik=Rmi8WhNfmDk9UA&pid=ImgRaw&r=0" height ="240" alt="alt"/>
+            <p>Experimenta el equilibrio perfecto entre elegancia, potencia y tecnología con la Ford Edge. Esta SUV mediana combina un diseño sofisticado, un rendimiento potente y una amplia gama de características de alta gama para brindarte una experiencia de conducción excepcional.</p>
   
             <footer> 
                 Derechos Reservados 2023 &copy;
