Practica 2 de Ford seguimiento 2.0

--- a/src/main/resources/static/reglamentos.html
+++ b/src/main/resources/static/reglamentos.html
@@ -42,9 +42,22 @@ semestral o anual. </li>
 permitidos por cada emisor y las mismas pueden cambiar sin previo
 aviso.</li>
             </ul>
+            
+            <article>
+                    <h3>Reglamentos</h3>  
+                    <br>
+                    <h3>Autos Usados</h3>  
+                    <figure>  
+                        <iframe
+                            src="https://listado.mercadolibre.com.mx/ford#!messageGeolocation"
+                            width="1100"
+                            height="400" 
+                        </iframe>
+                    </figure>
+                </article>
 
             <footer> 
-                Derechos Reservados 2023 &copy;
+                Derechos Reservados Ford 2023 &copy;
             </footer>
         </body>
 </html>
