--- a/src/main/resources/static/Introduccion.html
+++ b/src/main/resources/static/Introduccion.html
@@ -54,7 +54,7 @@
             </section>
 
             <footer> 
-                Derechos Reservados 2023 &copy;
+                Derechos Reservados Ford 2023 &copy;
             </footer>
         </body>
     </html>
