--- a/src/main/resources/static/TiposAutos.html
+++ b/src/main/resources/static/TiposAutos.html
@@ -45,7 +45,7 @@
             <p>Experimenta el equilibrio perfecto entre elegancia, potencia y tecnología con la Ford Edge. Esta SUV mediana combina un diseño sofisticado, un rendimiento potente y una amplia gama de características de alta gama para brindarte una experiencia de conducción excepcional.</p>
   
             <footer> 
-                Derechos Reservados 2023 &copy;
+                Derechos Reservados Ford 2023 &copy;
             </footer>
         </body>
 </html>
