--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,7 +36,7 @@
             </aside>
   
             <footer> 
-                Derechos Reservados 2023 &copy;
+                Derechos Reservados Ford 2023 &copy;
             </footer>
         </body>
 </html>
