--- a/src/main/resources/static/informacion.html
+++ b/src/main/resources/static/informacion.html
@@ -44,7 +44,7 @@
                 <li>2234-90</li>
             </ul>
             <footer> 
-                Derechos Reservados 2023 &copy;
+                Derechos Reservados Ford 2023 &copy;
             </footer>
         </body>
     </html>
