Practica 2 de Ford seguimiento 2.1

--- a/src/main/resources/static/Introduccion.html
+++ b/src/main/resources/static/Introduccion.html
@@ -23,32 +23,48 @@
                     </ul>
                 </nav>
             </header>
+            <h2 style="text-align: left;color:blue">Más que un auto deportivo</h2>
+            <h2 style="text-align: left;color:blue">una emoción</h2>
+            <img src="https://th.bing.com/th/id/R.588615adb0addfebb834c23d0dea9aad?rik=5dvPtiaRqRMhEQ&riu=http%3a%2f%2fwww.carlogos.org%2flogo%2fFord-logo-1929-1440x900.png&ehk=RAsrO0q5cR5IMcJGRlWGkUpRmE9ji6jf6yJv%2f4e7D4Y%3d&risl=&pid=ImgRaw&r=0" height ="200" alt="alt"/>
+            <p>Desvelado el nuevo Ford Mustang GTD</p>
+            <p>una bestia sobre ruedas con genes de GT3</p>
+            <p>y un potente motor V8</p>
             <section> 
+                <a name="arriba"></a>
                 <h2>Potencia Y Velocidad</h2>
+                <a href="#abajo">Ir abajo</a>
                 <article>
-                    <h3>Nuevo Ford Munstang GTD</h3>    
+                    <h3 style="text-align: center;color:cadetblue">Nuevo Ford Mustang GTD</h3>    
                     <figure> 
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/lW3jKt29edI?si=243-X7t9opc-dTYg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        
+                        <iframe width="640" height="315" src="https://www.youtube.com/embed/lW3jKt29edI?si=243-X7t9opc-dTYg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-                        <h1>Algunas Especificaciones</h1>
+
+                        <h1 style="text-align: center;color:cadetblue">Algunas Especificaciones</h1>
                         <ol>
-                            <li>Motor</li>
+                            <li style="text-align: left;color:blue">Motor</li>
+                            <h4>Los motores de un Ford Mustang pueden variar desde motores EcoBoost de cuatro cilindros hasta potentes motores V8. Los detalles específicos del motor, como la cilindrada, la configuración de los cilindros y la potencia, variarán según el año y el modelo del Mustang. </h4>
                             <br>
-                            <li>Potencia</li>
+                            <li style="text-align: left;color:blue">Potencia</li>
+                            <h4>La potencia puede variar desde alrededor de 300 caballos de fuerza en los modelos base hasta más de 700 caballos de fuerza en versiones de alto rendimiento como el Shelby GT500.</h4>
                             <br>
-                            <li>Frenos</li>
+                            <li style="text-align: left;color:blue">Frenos</li>
+                            <h4>Los frenos en un Ford Mustang suelen ser de disco en las cuatro ruedas para proporcionar un rendimiento de frenado adecuado, especialmente en las versiones de alto rendimiento.</h4>
                             <br>
-                            <li>Aerodinamica</li>
+                            <li style="text-align: left;color:blue">Aerodinamica</li>
+                            <h4>La aerodinámica de un Mustang puede variar según el modelo y las intenciones de diseño. Los modelos de alto rendimiento a menudo incluyen elementos aerodinámicos adicionales, como alerones y difusores, para mejorar la estabilidad a altas velocidades.</h4>
                             <br>
-                            <li>Motor</li>
+                            <li style="text-align: left;color:blue">Techologia</li>
+                            <h4>Los Mustangs modernos suelen estar equipados con tecnología avanzada que incluye sistemas de infoentretenimiento con pantalla táctil, conectividad Bluetooth, Apple CarPlay y Android Auto, sistemas de sonido premium, asistencia al conductor, sistemas de navegación, control de crucero adaptativo y más. </h4>
                             <br>
-                            <li>Suspecion</li>
+                            <li style="text-align: left;color:blue">Suspecion</li>
+                            <h4>La suspensión de un Mustang está diseñada para proporcionar un equilibrio entre comodidad en la conducción y manejo deportivo. Los modelos deportivos y de alto rendimiento pueden tener configuraciones de suspensión ajustadas para un manejo más agresivo, mientras que los modelos base tienden a ser más suaves en la conducción diaria.</h4>
                         </ol>
 
-                        <h3>Nuevo Americano Mas Potente!!!</h3>
+                        <h3 style="text-align: center;color:cadetblue">Nuevo Americano Mas Potente!!!</h3>
 
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/G56P_F-nVZY?si=bSY6yaRulNNTwCaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe width="640" height="315" src="https://www.youtube.com/embed/G56P_F-nVZY?si=bSY6yaRulNNTwCaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <a href="#arriba">Ir arriba</a>
+                        <a name="abajo"></a>
                     </figure>
                 </article>
             </section>
@@ -57,4 +73,4 @@
                 Derechos Reservados Ford 2023 &copy;
             </footer>
         </body>
-    </html>
+</html>
