--- a/src/main/resources/static/TiposAutos.html
+++ b/src/main/resources/static/TiposAutos.html
@@ -25,25 +25,35 @@
             </header>
             
             <br>
-            <h1>Tipos de Autos</h1>
+            <a name="arriba"></a>
+            <h1 style="text-align: center;">Tipos de Autos</h1>
+            <a href="#abajo">Ir abajo</a>
             <br>
             
-            <h2>Ford Raptor</h2>
-            <img src="https://di-uploads-pod2.dealerinspire.com/riverviewford2/uploads/2016/01/2017-Ford-Raptor-On-White.png" height ="230" alt="alt"/>
+            <h2 style="text-align: left;color:cadetblue">Ford Raptor</h2>
+            <img src="https://di-uploads-pod2.dealerinspire.com/riverviewford2/uploads/2016/01/2017-Ford-Raptor-On-White.png" height ="200" alt="alt"/>
+            <img src="https://www.leonford.pe/data/autos/pick-up-ford-raptor.png" height ="200" alt="alt"/>
             <p>El Ford Raptor es una línea de camionetas pickup de alto rendimiento fabricadas por Ford Motor Company. Están diseñadas específicamente para el rendimiento todoterreno y se destacan por su capacidad todoterreno, potencia y estilo agresivo.</p>
-            <h2>Ford Explorer</h2>
-            <img src="https://th.bing.com/th/id/R.4508a5f559ee3b49bb6f29ab8ff88864?rik=rsbQH0LLO0DGPw&pid=ImgRaw&r=0" height ="230" alt="alt"/> 
+            <h2 style="text-align: left;color:cadetblue">Ford Explorer</h2>
+            <img src="https://th.bing.com/th/id/R.4508a5f559ee3b49bb6f29ab8ff88864?rik=rsbQH0LLO0DGPw&pid=ImgRaw&r=0" height ="270" alt="alt"/>
+            <img src="https://st.automobilemag.com/uploads/sites/10/2015/11/2016-ford-explorer-xlt-suv-side-view.png" height ="320" alt="alt"/> 
             <p>La Ford Explorer es una SUV (vehículo utilitario deportivo) fabricada por Ford Motor Company y se ha convertido en uno de los modelos más icónicos de la marca.</p>
-            <h2>Ford Munstang</h2>
-            <img src="https://th.bing.com/th/id/R.cc7069809fad465311b2380d4b591e5c?rik=GwVMMWk2hoDtew&pid=ImgRaw&r=0" height ="230" alt="alt"/> 
+            <h2 style="text-align: left;color:cadetblue">Ford Munstang</h2>
+            <img src="https://th.bing.com/th/id/R.cc7069809fad465311b2380d4b591e5c?rik=GwVMMWk2hoDtew&pid=ImgRaw&r=0" height ="230" alt="alt"/>
+            <img src="https://th.bing.com/th/id/R.2ac31d941de2cb2ec68006ffe2b7f41e?rik=7ri3NHI5m0vnQw&riu=http%3a%2f%2fpngimg.com%2fuploads%2fmustang%2fmustang_PNG40.png&ehk=0gDJs7aDIeT5x97AfSW8RpAs3CLYo0bzsYDPVp6Yqlc%3d&risl=&pid=ImgRaw&r=0" height ="260" alt="alt"/> 
             <p>El Ford Mustang es un icónico automóvil deportivo fabricado por Ford Motor Company desde la década de 1960.</p>
-            <h2>Ford Escape</h2>
+            <h2 style="text-align: left;color:cadetblue">Ford Escape</h2>
             <img src="https://th.bing.com/th/id/OIP.hBoAcvUxEUO1g3w4DdPXCwHaEE?pid=ImgDet&rs=1" height ="230" alt="alt"/>   
+            <img src="https://th.bing.com/th/id/R.d75fed914669815c1f691d1bdb1e48e0?rik=GoT3%2fRjxIUMk%2fw&riu=http%3a%2f%2fpicolio.auto123.com%2f16photo%2fford%2f2016-ford-escape-s-fwd.png&ehk=d2QHhSE7J%2f4%2f8ef0ubnrdrxJAxYx2o%2b1Xad3ao25lWo%3d&risl=&pid=ImgRaw&r=0" height ="330" alt="alt"/>
             <p>Experimenta el equilibrio perfecto entre estilo, comodidad y rendimiento con la Ford Escape. Esta SUV compacta combina un diseño moderno, tecnología avanzada y eficiencia de combustible para llevarte a donde quieras llegar con estilo y confianza.</p>
-            <h2>Ford Edge</h2>
-            <img src="https://th.bing.com/th/id/R.f08b48d25b1091b0d0dcb7cf33390a41?rik=Rmi8WhNfmDk9UA&pid=ImgRaw&r=0" height ="240" alt="alt"/>
+            <h2 style="text-align: left;color:cadetblue">Ford Edge</h2>
+            <img src="https://th.bing.com/th/id/R.f08b48d25b1091b0d0dcb7cf33390a41?rik=Rmi8WhNfmDk9UA&pid=ImgRaw&r=0" height ="270" alt="alt"/>
+            <img src="https://carimages.d2cmedia.ca/newcars/cb64ba963d3c7fc/2024/Ford/Edge/MjkxNDg1Xk1lZGlhIEdhbGxlcnk/ItfTDsGnEPQHXWv6G2igsszAkJOI81qF8Ft07nHxQPuABauj27TSZ4MvNLpvU34upDssCFg0sv-4qsLEbFWQXR74HNyqSdUOCvD_j-nEpnW0pdFwW5uyGexhzmRqc4IW4XGkp1RmNIEY4K6K5L6RlzzMowE91txQSO_RbwAE7yY/cc_2024FOS150106_03_640_B3.png" height ="330" alt="alt"/>
             <p>Experimenta el equilibrio perfecto entre elegancia, potencia y tecnología con la Ford Edge. Esta SUV mediana combina un diseño sofisticado, un rendimiento potente y una amplia gama de características de alta gama para brindarte una experiencia de conducción excepcional.</p>
-  
+            <a href="#arriba">Ir arriba</a>
+            <a name="abajo"></a>
+            <br>
+            <h1 style="text-align: center;">Para nosotros vos siempre estás primero</h1>
             <footer> 
                 Derechos Reservados Ford 2023 &copy;
             </footer>
