--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,14 +24,14 @@
                 </nav>
             </header>
             <aside> 
-                <h1>Contactanos</h1> 
-                <img src="img/R.png" height ="230" alt="alt"/>
-                <h2>Mecanico</h2>
-                <img src="img/mecanico.png" height ="280" alt="alt"/>
-                <h3>Servicios</h3>
+                <h1 >Contactanos</h1> 
+                <img src="" height ="230" alt="alt"/>
+                <h1>Mecanico</h1>
+                <img src="" height ="280" alt="alt"/>
+                <h1>Servicios</h1>
                 <img src="img/servicios.png" height ="95" alt="alt"/>
-                <h4>financiamiento</h4>
-                <img src="img/financiamento.png" height ="230" alt="alt"/>
+                <h1>financiamiento</h1>
+                <img src="" height ="230" alt="alt"/>
                 <p>Somos los distribuidores exclusivos para Ford Costa Rica, nuestros talleres de servicio cuentan con la tecnología, herramientas y capacidad para darle el mejor mantenimiento mecánico preventivo y correctivo a su FORD. Además contamos con el servicio de enderezado y pintura en Purdy Carrocería.</p>              
             </aside>
   
