--- a/src/main/resources/static/registro.html
+++ b/src/main/resources/static/registro.html
@@ -24,12 +24,12 @@
                 </nav>
             </header>
             <section> 
-                <h1>Ford Motor Company</h1>
+                <h1 style="text-align: center;color:cadetblue">Ford Motor Company</h1>
                 <article>
                     <br>
-                    <h3>En Ford Motor Company trabajamos día a día con un propósito muy claro, impulsar el progreso humano a través de la libertad de movimiento y así ha sido desde el día uno, en 1903, cuando Ford Motor Company fue fundada con la idea de poner al mundo sobre ruedas, y años después así sería.</h3>
+                    <h3 style="text-align: center;">En Ford Motor Company trabajamos día a día con un propósito muy claro, impulsar el progreso humano a través de la libertad de movimiento y así ha sido desde el día uno, en 1903, cuando Ford Motor Company fue fundada con la idea de poner al mundo sobre ruedas, y años después así sería.</h3>
                     <br>
-                    <h3>Digite su Informacion Estimado Usuario</h3>
+                    <h3 style="text-align: center;color:cadetblue">Digite su Informacion Estimado Usuario</h3>
                     <form action="/usuarios/registro"
                           method="post">
                         <table border="0">
@@ -75,7 +75,7 @@
                 </article>
             </section>       
 
-            <h2>Registro de Compra</h2>
+            <h2 style="text-align: left;color:cadetblue">Registro de Compra</h2>
             <br>
             <img src="https://www.ramseyford.com/static/dealer-14887/ford-text.png" height ="100" alt="alt"/>
             <p>Nuestro equipo de asesores y profesionales están</p>
