--- a/src/main/resources/static/reglamentos.html
+++ b/src/main/resources/static/reglamentos.html
@@ -24,40 +24,41 @@
                 </nav>
             </header>
             <h1>Reglamentos</h1>
-            
-            <ul>
-                <li>- Las condiciones son otorgadas por cada entidad bancaria y su
-actualización es responsabilidad de cada emisor de crédito.</li>
-                <br>
-                <li>- Las condiciones podrían variar con respecto a las otorgadas en
-sucursales físicas	de Ford.</li>
-                <br>
-                <li>- Las condiciones están sujetas a cambios sin previo aviso y no se deben
-considerar finales.</li>
-                <br>
-                <li>- La cuota mensual otorgada no incluye el costo del seguro mensual,
-semestral o anual. </li>
-                <br>
-                <li>- Las primas otorgadas por defecto corresponden a los mínimos
-permitidos por cada emisor y las mismas pueden cambiar sin previo
-aviso.</li>
-            </ul>
-            
-            <article>
-                    <h3>Reglamentos</h3>  
-                    <br>
-                    <h3>Autos Usados</h3>  
-                    <figure>  
-                        <iframe
-                            src="https://listado.mercadolibre.com.mx/ford#!messageGeolocation"
-                            width="1100"
-                            height="400" 
-                        </iframe>
-                    </figure>
-                </article>
 
-            <footer> 
-                Derechos Reservados Ford 2023 &copy;
-            </footer>
-        </body>
+            <ul>
+                <li>Las condiciones son otorgadas por cada entidad bancaria y su
+                    actualización es responsabilidad de cada emisor de crédito.</li>
+                <br>
+                <li>Las condiciones podrían variar con respecto a las otorgadas en
+                    sucursales físicas	de Ford.</li>
+                <br>
+                <li>Las condiciones están sujetas a cambios sin previo aviso y no se deben
+                    considerar finales.</li>
+                <br>
+                <li>La cuota mensual otorgada no incluye el costo del seguro mensual,
+                    semestral o anual. </li>
+                <br>
+                <li>Las primas otorgadas por defecto corresponden a los mínimos
+                    permitidos por cada emisor y las mismas pueden cambiar sin previo
+                    aviso.</li>
+            </ul>
+
+            <article>
+                <h3 style="text-align: center;color:blue">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h3>  
+                <br>
+                <h1 style="text-align: center;color:blue">Autos Usados</h1> 
+                <br>
+                <figure>  
+                    <iframe
+                        src="https://listado.mercadolibre.com.mx/ford#!messageGeolocation"
+                        width="1100"
+                        height="400" 
+                </iframe>
+            </figure>
+        </article>
+
+        <footer> 
+            Derechos Reservados Ford 2023 &copy;
+        </footer>
+    </body>
 </html>
