--- a/src/main/resources/static/informacion.html
+++ b/src/main/resources/static/informacion.html
@@ -23,26 +23,28 @@
                     </ul>
                 </nav>
             </header>
+            <h1 style="text-align: right;color:blue">Mapa</h1>
             <article>
-                <h1>Ubicanos</h1>
+                <h1 style="text-align: center;color:cadetblue">Ubicanos</h1>
                 <br>
                 <h1>Sucursales de Ford Central Detroit, Míchigan,</h1>    
                 <figure>  
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d188771.66130142577!2d-83.43336641328122!3d42.33064220000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883b2cd3c764eae7%3A0xab9ed34c5c51add2!2sBob%20Maxey%20Ford!5e0!3m2!1ses!2scr!4v1696379415323!5m2!1ses!2scr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </figure>
             </article>
-            <ul>
-                <li>Numeros de Telefono</li>
+            <ol type="i">
+                <h1>Numeros de Telefono</h1>
                 <br>
-                <h2>Sucursal Heredia</h2>
-                <li>2243-2467</li>
+                <h2 style="text-align: center;color:cadetblue">Sucursal Heredia</h2>
+                <li style="text-align: center";>2243-2467</li>
                 <br>
-                <h2>Sucursal Santa Ana</h2>
-                <li>2267-6709</li>
+                <h2 style="text-align: center;color:cadetblue">Sucursal Santa Ana</h2>
+                <li style="text-align: center";>2267-6709</li>
                 <br>
-                <h2>Sucursal San Jose</h2>
-                <li>2234-90</li>
-            </ul>
+                <h2 style="text-align: center;color:cadetblue">Sucursal San Jose</h2>
+                <li style="text-align: center";>2234-90</li>
+            </ol>
+                <h1 style="text-align: center;color:blue">Ford Motor Company</h1>
             <footer> 
                 Derechos Reservados Ford 2023 &copy;
             </footer>
