EA-08-Practicas-2 Marcos Vinicio Solis Morales

--- a/src/main/resources/static/Introduccion.html
+++ b/src/main/resources/static/Introduccion.html
@@ -36,7 +36,7 @@
                 <article>
                     <h3 style="text-align: center;color:cadetblue">Nuevo Ford Mustang GTD</h3>    
                     <figure> 
-                        <iframe width="640" height="315" src="https://www.youtube.com/embed/lW3jKt29edI?si=243-X7t9opc-dTYg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <p align="center" ><iframe width="640" height="315" src="https://www.youtube.com/embed/lW3jKt29edI?si=243-X7t9opc-dTYg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
                         <h1 style="text-align: center;color:cadetblue">Algunas Especificaciones</h1>
@@ -62,7 +62,7 @@
 
                         <h3 style="text-align: center;color:cadetblue">Nuevo Americano Mas Potente!!!</h3>
 
-                        <iframe width="640" height="315" src="https://www.youtube.com/embed/G56P_F-nVZY?si=bSY6yaRulNNTwCaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <p align="center" ><iframe width="640" height="315" src="https://www.youtube.com/embed/G56P_F-nVZY?si=bSY6yaRulNNTwCaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <a href="#arriba">Ir arriba</a>
                         <a name="abajo"></a>
                     </figure>
