EA-08-Practicas 2 Marcos Vinicio Solis Morales

--- a/src/main/resources/static/reglamentos.html
+++ b/src/main/resources/static/reglamentos.html
@@ -23,8 +23,9 @@
                     </ul>
                 </nav>
             </header>
+            <div style="text-align: left;color: teal">
             <h1>Reglamentos</h1>
-
+           
             <ul>
                 <li>Las condiciones son otorgadas por cada entidad bancaria y su
                     actualización es responsabilidad de cada emisor de crédito.</li>
@@ -46,7 +47,7 @@
             <article>
                 <h3 style="text-align: center;color:blue">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h3>  
                 <br>
-                <h1 style="text-align: center;color:blue">Autos Usados</h1> 
+                <h1 style="text-align: center;color:blue">vehiculos Usados</h1> 
                 <br>
                 <figure>  
                     <iframe
