--- a/src/main/resources/static/informacion.html
+++ b/src/main/resources/static/informacion.html
@@ -25,7 +25,7 @@
             </header>
     
             <article>
-                <h1 style="text-align: center;color:cadetblue">Ubicanos</h1>
+                <h1 style="text-align: center;color:cadetblue">Ubicaciones</h1>
                 <br>
                 <h1 style="text-align: center;">Sucursales de Ford Central Detroit, Míchigan,</h1>    
                 <figure>  
